--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -28,7 +28,7 @@ body {
   justify-content: center;
   margin: 0;
   padding: 0;
-  width: 100vw;
+  width: 100%;
 
   .construction {
     align-self: center;
